Fix header.scss Add a z-index to avoid elements to show on top of it

--- a/front/src/scss/layout/header.scss
+++ b/front/src/scss/layout/header.scss
@@ -2,6 +2,7 @@
 $side: max(1rem, calc((100% - 600px)/2));
 .header{
     position: fixed;
+    z-index: 1000;
     width: 100%;
     top: 0;
     min-height: 7vh;
